Wed Jun  6 19:23:47 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm_opendds.mpb:
          Added additional idl flags to disable some files to be generated

        * dds/DCPS/Service_Participant.cpp:
          Removed noop return

        * dds/DdsDcps.mpc:
          Removed files that aren't generated anymore

Wed Jun  6 17:06:39 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DdsDcps.mpc:
          Restored requires dds4ccm

Wed Jun  6 08:09:54 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm_opendds.mpb:
        * dds/DdsDcps.mpc:
          More install fixes for dds4ccm

Wed Jun  6 05:44:31 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DdsDcps.mpc:
          Add DdsDcps_lem_stub_export.h as header file

Tue Jun  5 18:18:21 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DdsDcps.mpc:
          More install fixes

Tue Jun  5 11:48:13 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DdsDcps.mpc:
          List inline files

Tue Jun  5 10:38:04 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * tests/DCPS/RegisterInstance/register_instance.mpc:
          Fixed final link issues.

Tue Jun  5 09:49:08 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/QOS_XML_Handler/qos_xml_handler.mpc:
          Fixed header filename

Mon Jun  4 20:26:18 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * tests/DCPS/Ownership/Ownership.mpc:

          Removed inheritance of ownership_profile and
          replaced with a requires.

        * MPC/config/ownership_profile.mpb:

          Removed this file.

Mon Jun  4 15:16:52 UTC 2012  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          Replaced tab with spaces.

        * dds/DCPS/FeatureDisabledQosCheck.h:

          Removed trailing whitespace.

Mon Jun  4 14:42:42 UTC 2012  Adam Mitz  <mitza@ociweb.com>
